workhorse/gitops/addons/kube-prometheus-stack/overlays/dev/ingress-alertmanager.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-server
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: workhorse-ca
spec:
  tls:
    - hosts:
        - alertmanager.dev.local
      secretName: alertmanager-dev
  ingressClassName: nginx
  rules:
    - host: alertmanager.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
