workhorse/gitops/addons/kube-prometheus-stack/overlays/dev/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: workhorse-ca
spec:
  tls:
    - hosts:
        - prometheus.dev.local
      secretName: prometheus-dev
  ingressClassName: nginx
  rules:
  - host: prometheus.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
